Changes

=head1 0.54 TO BE RELEASED ONCE PADRE 0.41 IS RELEASED!

	- Allow the use of the new syntax highlighter configuration of Padre 0.41 (szabgab)

=head1 0.53 2009.7.18

	- Moved Rakudo Perl 6 functionality into a separate menu.
	- Fixed ticket:457 "Store Perl 6 temporary folders in a persistent
		temporary directory"
	- Cleanup STD lex cache now works with ticket:457
	- Updated Arabic translation.

=head1 0.52 2009.7.18

	- Removed parse_perl6_table_index.pl & perl6_table_index.pod since this is 
		grok's territory now...
	- Fixed a couple of Perl6->Perl 6 typos, and added some missing POD.
	- Unified copyright on all files.
	- Added 03-copyright.t to author-only test for copyright.
	- Moved Cleanup STD Lex Cache into "Maintenance" sub menu/
	- #padre, #perl6 and perl6-projects.org are now accessible via the "More Help?" menu
	- Added a TM to Larry Wall's Camelia icon.
	- Depends on Perl6::Refactor.
	- Initial stub implementation of refactoring tools menu with a coming-soon message 
		box to Perl 6 refactoring support.
	- Don't hold the editor and document objects in the task as they might be gone
		by the time the background process finished (see bug #445  and #299) 
		(szabgab++)

=head1 0.51 2009.7.16

	- Exact case-insensitive matches are always displayed first in Perl 6 Help results.
	- Depends on lucky grok 0.13 which knows about Perl 6 tablets.
	- No need to extend grok with Perl 6 tablets anymore; grok 0.13 knows about it now.
	- Updated translations:
		Brazilian portuguese (garu++)

=head1 0.50 2009.7.10

	- Wrote a script to read http://www.perlfoundation.org/perl6/index.cgi?perl_table_index 
		and write a POD named perl6_table_index.pod. Thanks to Herbert Breunung and 
		Martin Berends.
	- Extended Grok in an unofficial way to support perl6_table_index.pod and thus 
		we now have more Perl 6 keywords/builtin and operator documentation.
	- use only one grok instance per dialog lifetime